# NeedleFinder

./: .gitignore  CMakeLists.txt  README
NeedleFinder/: .pre-commit-config.yaml  .~lock.funs-uniq.ods#  CMakeLists.txt  NeedleFinder.py  NeedleFinder.py.bak  Notebook.txt  README.md  funs-uniq.ods  matArcLen_mm.py  matEndSegAngles_rad.py  matFs_mN.py  matYDefl_mm.py  pyproject.toml  setup.cfg
NeedleFinder/Config/: default.cfg  miccai15.cfg  miccai2013.cfg
NeedleFinder/NeedleFinderWizard/: CMakeLists.txt  Helper.py  NFFirstRegistrationStep.py  NFLoadModelStep.py  NFNeedlePlanningStep.py  NFNeedleSegmentationStep.py  NFSecondRegistrationStep.py  NFSelectApplicatorStep.py  NFSelectProcedureStep.py  NFStep.py  __init__.py
NeedleFinder/Resources/: needlefinder_logic.py  needlefinder_tests.py  needlefinder_widget.py  needles_utils.py  utils.py
NeedleFinder/Resources/Icons/: .gitignore
NeedleFinder/Resources/Template/: template.vsd
NeedleFinder/Resources/Template/3points/: F_1.acsv  F_2.acsv  F_3.acsv  Template.mrml  Template.stl  vtkMRMLLinearTransformNode4.tfm
NeedleFinder/Resources/Template/3points-corner/: F_1.acsv  F_2.acsv  F_3.acsv  Template.mrml  Template.stl
NeedleFinder/Resources/Template/4points/: F_1.acsv  F_2.acsv  F_3.acsv  F_4.acsv  Obturator_reg.stl  Template.mrml
NeedleFinder/Resources/constants/: matArcLen_mm.py  matEndSegAngles_rad.py  matFs_mN.py  matYDefl_mm.py  settings.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/_build/doctrees/: NeedleFinder.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  NeedleFinder.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: NeedleFinder.html  index.html
docs/_build/html/_sources/: NeedleFinder.txt  index.txt  modules.txt
docs/_build/html/_static/: basic.css  default.css
